# dots-pv-installation-service

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-image.yml  python-app.yml
src/ExampleCalculationService/: pvsystemservice.py
src/pvsystemservice/: pvsystemservice.py
test/: TestPvService.py  TestTemplate.py  esdl_parser.py  test.esdl
