[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pvsystemservice"
version = "0.0.1"
authors = [
  { name="Gijs Verhoeven", email="g.verhoeven.1@tue.nl" },
]
description = "PV System Service package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/EES-TUe/pvsystemservice"
Issues = "https://github.com/EES-TUe/pvsystemservice/issues"